# docker-registry

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  cliff.toml
.github/workflows/: ci-private.yml  ci.yml  release.yaml
examples/: checkregistry.rs  image-labels.rs  image.rs  image_new.rs  login.rs  run-all.sh  tags.rs  trace.rs
src/: errors.rs  lib.rs  mediatypes.rs  reference.rs  render.rs
src/v2/: auth.rs  blobs.rs  catalog.rs  config.rs  content_digest.rs  mod.rs  tags.rs
src/v2/manifest/: manifest_schema1.rs  manifest_schema2.rs  mod.rs
tests/: manifest.rs  mod.rs  reference.rs
tests/fixtures/: api_error_fixture_with_detail.json  api_error_fixture_without_detail.json  manifest_oci_image_manifest.json  quayio_steveej_cincinnati-test-labels_dkregistry-test.json
tests/mock/: api_version.rs  base_client.rs  blobs_download.rs  catalog.rs  tags_dockerv2.rs  tags_quay.rs
tests/net/: mod.rs
tests/net/docker_io/: mod.rs
tests/net/gcr_io/: mod.rs
tests/net/quay_io/: mod.rs
