[package]
name = "dockreg"
rust-version = "1.70.0"
version = "0.5.1-alpha.0"
authors = ["Bryant Biggs <bryantbiggs@gamil.com>", "Luca Bruno <lucab@debian.org>", "Stefan Junker <sjunker@redhat.com>"]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/dockreg"
repository = "https://github.com/clowdhaus/dockreg-rs"
description = "A pure-Rust asynchronous library for Docker Registry API"
keywords = ["docker", "registry", "async"]
exclude = [
".gitignore",
]
edition = "2021"

[package.metadata.release]
disable-publish = true
disable-push = true
post-release-commit-message = "cargo: development version bump"
pre-release-commit-message = "cargo: dockreg release {{version}}"
sign-commit = true
sign-tag = true
tag-message = "dockreg v{{version}}"

[dependencies]
base64 = "0.22"
futures = "0.3"
libflate = "2.1"
log = "0.4"
mime = "0.3"
regex-lite = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_ignored = "0.1"
strum = { version = "0.26", features = ["derive"] }
tar = "0.4"
tokio = { version = "1.0", default-features = false, features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream"] }
sha2 = "0.10"
bytes = "1.1"
pin-project = "1.0"
async-stream = "0.3"
thiserror = "1.0"
url = "2.1"

[dev-dependencies]
dirs = "5.0"
env_logger = "0.11"
hyper = "0.14"
mockito = "1.5"
native-tls = "0.2"
test-case = "3.3"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"

[features]
default = ["reqwest-default-tls"]
reqwest-default-tls = ["reqwest/default-tls"]
reqwest-rustls = ["reqwest/rustls-tls"]
test-net = []
test-net-private = []
test-mock = []
