[package]
name = "docker-registry"
rust-version = "1.85.0"
version = "0.8.0"
authors = [
  "Luca Bruno <lucab@debian.org>",
  "Stefan Junker <sjunker@redhat.com>",
  "Bryant Biggs <bryantbiggs@gamil.com>",
]
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/docker-registry"
repository = "https://github.com/clowdhaus/docker-registry"
description = "A pure-Rust asynchronous library for Docker Registry HTTP API v2"
keywords = [
  "docker",
  "registry",
  "async",
]
exclude = [
  ".gitignore",
  "certificates",
  "tests",
]
edition = "2024"

[dependencies]
base64 = "0.22"
futures = "0.3"
libflate = "2.1"
log = "0.4"
mime = "0.3"
regex-lite = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
serde_ignored = "0.1"
strum = { version = "0.27", features = ["derive"] }
tar = "0.4"
tokio = { version = "1.0", default-features = false, features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream"] }
sha2 = "0.10"
bytes = "1.9"
pin-project = "1.1"
async-stream = "0.3"
thiserror = "2.0"
url = "2.5"
zstd = "0.13"

[dev-dependencies]
dirs = "6.0"
hyper = "1.5"
mockito = "1.6"
native-tls = "0.2"
rustls-cert-gen = { version = "0.2", default-features = false, features = ["aws_lc_rs"] }
test-case = "3.3"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[features]
default = ["reqwest-default-tls"]
reqwest-default-tls = ["reqwest/default-tls"]
reqwest-rustls = ["reqwest/rustls-tls"]
test-net-private = []
